--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/material-top-tabs": "^5.1.14",
     "@react-navigation/native": "^5.2.3",
     "@react-navigation/stack": "^5.2.18",
+    "axios": "^0.19.2",
     "expo": "~37.0.3",
+    "expo-location": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
