--- a/app.json
+++ b/app.json
@@ -1,11 +1,10 @@
 {
   "expo": {
-    "name": "plantinhas-app",
+    "name": "App das Prantinhas",
     "slug": "plantinhas-app",
     "platforms": [
       "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
@@ -22,7 +21,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.gmail.jpalvesl.plantinhasapp"
+    },
+    "android": {
+      "package": "com.gmail.jpalvesl.plantinhasapp"
     }
   }
 }
