chore: migra todo o projeto pra uma versao mais nova do expo

--- a/app.json
+++ b/app.json
@@ -1,31 +1,27 @@
 {
   "expo": {
-    "name": "App das Prantinhas",
-    "slug": "plantinhas-app",
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "name": "my-app",
+    "slug": "my-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.gmail.jpalvesl.plantinhasapp"
+      "supportsTablet": true
     },
     "android": {
-      "package": "com.gmail.jpalvesl.plantinhasapp"
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      }
+    },
+    "web": {
+      "favicon": "./assets/favicon.png"
     }
   }
 }
