--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "plantinhas-app",
+  "version": "1.0.0",
+  "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/bottom-tabs": "^5.x",
-    "@react-navigation/material-top-tabs": "^5.x",
-    "@react-navigation/native": "^5.x",
-    "@react-navigation/stack": "^5.x",
-    "axios": "^0.26.1",
-    "expo": "^44.0.0",
-    "expo-location": "~14.0.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-gesture-handler": "~2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-masked-view/masked-view": "0.3.1",
+    "@react-native-picker/picker": "^2.7.7",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/material-top-tabs": "^6.6.14",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.3",
+    "expo": "~51.0.24",
+    "expo-location": "~17.0.1",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-native": "0.74.3",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-material-ui": "^1.30.1",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-tab-view": "^2.x",
-    "react-native-web": "0.17.1",
-    "styled-components": "^5.3.3"
+    "react-native-pager-view": "6.3.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-tab-view": "^3.5.2",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "babel-preset-expo": "9.0.2"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
